Bug 419948 - Changing an individual folder to "Prefer HTML" or to "Prefer Plain Text" is not remembered after restarting KMail
Summary: Changing an individual folder to "Prefer HTML" or to "Prefer Plain Text" is n...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-11 09:47 UTC by null
Modified: 2020-04-17 19:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.14.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description null 2020-04-11 09:47:52 UTC
The issues happens in both directions:
- When "Prefer HTML" is enabled in the global settings dialog, setting an invidual folder to "Prefer Plain Text" works only until restarting KMail, after which the setting has been lost again.
- When "Prefer Plain Text" is enabled in the global settings dialog, setting an invidual folder to "Prefer HTML" works only until restarting KMail, after which the setting has been lost again.

I can reproduce this bug with KMail 5.9.2 (Qt 5.11.2 / KF 5.51) as well as KMail 5.14.40 (Qt 5.14.1 / KF 5.69).

Steps to reproduce:
- Configure KMail -> Security: Uncheck "Prefer HTML"
- Folder -> Message Default Format -> Prefer HTML
- Notice how the message display is switched to the HTML version
- Close and reopen KMail
- Notice how the message display reverted back to the plain text version

Possibly related: Bug 363027
Comment 1 Laurent Montel 2020-04-13 18:03:46 UTC
Git commit 3fab426dfd0bea6fc6fb49e33fe939dc14d584a4 by Laurent Montel.
Committed on 13/04/2020 at 18:03.
Pushed by mlaurent into branch 'release/20.04'.

Fix Bug 419948 - Changing an individual folder to "Prefer HTML" or to "Prefer Plain Text" is not remembered after restarting KMail

FIXED-IN: 5.14.0

M  +1    -0    src/collectionpage/collectionviewpage.cpp
M  +1    -1    src/manageshowcollectionproperties.cpp

https://commits.kde.org/kmail/3fab426dfd0bea6fc6fb49e33fe939dc14d584a4
Comment 2 null 2020-04-15 08:05:09 UTC
Thanks. I tried to confirm the fix, but unfortunately I have to report that it is working only partially:

- Changing the setting via the "Folder Properties" context menu now works correctly.
- Going via the "Folder" entry in the menu bar (as outlined in the "steps to reproduce" above) is still broken.

In other words: Changes applied via the menu bar entry take effect without being reflected in the actual folder properties available in the context menu. Perhaps saving changes to the config file is missing there too?

Therefore reopening the bug.


(Side note: Changing the setting via the "Folder Properties" context menu requires switching messages for it to apply, while going via the "Folder" entry in the menu bar automatically refreshes the message. Maybe that's another hint?)
Comment 3 Laurent Montel 2020-04-15 11:45:17 UTC
Git commit 0bb891f144442792a14470596ca911b361084429 by Laurent Montel.
Committed on 15/04/2020 at 11:44.
Pushed by mlaurent into branch 'release/20.04'.

Refresh message when we change display format

M  +4    -2    src/kmmainwidget.cpp
M  +1    -0    src/kmmainwidget.h

https://commits.kde.org/kmail/0bb891f144442792a14470596ca911b361084429
Comment 4 Laurent Montel 2020-04-15 11:55:18 UTC
I fixed update message when we change settings in folder collection dialog

Now I will work on other bug. (confirmed)
Comment 5 Laurent Montel 2020-04-16 05:28:51 UTC
Git commit 0ad5a7ac48ca69b82aea50e007e2a481be670ab8 by Laurent Montel.
Committed on 16/04/2020 at 05:28.
Pushed by mlaurent into branch 'release/20.04'.

Fix Bug 419948 - Changing an individual folder to "Prefer HTML" or to "Prefer Plain Text" is not remembered after restarting KMail

FIXED-IN: 5.14.0

M  +4    -13   src/kmmainwidget.cpp

https://commits.kde.org/kmail/0ad5a7ac48ca69b82aea50e007e2a481be670ab8
Comment 6 null 2020-04-17 19:58:10 UTC
Thank you so much, again. I can confirm this is fixed now.

(Making the broken HTML toggle action in Bug 375314 the only major remaining issue for our deployment wrt. an excellent HTML switching experience.)