Fix Bug 419948 - Changing an individual folder to "Prefer HTML" or to "Prefer Plain Text" is not remembered after restarting KMail

FIXED-IN: 5.14.0
BUG: 419948