src/kmmainwidget.cpp
@@ -624,19 +624,10 @@ void KMMainWidget::readFolderConfig()
 //-----------------------------------------------------------------------------
 void KMMainWidget::writeFolderConfig()
 {
-    if (mCurrentCollection.isValid()) {
-        KSharedConfig::Ptr config = KMKernel::self()->config();
-        KConfigGroup group(config, MailCommon::FolderSettings::configGroupName(mCurrentCollection));
-        if (mFolderHtmlLoadExtPreference) {
-            group.writeEntry("htmlLoadExternalOverride", mFolderHtmlLoadExtPreference);
-        } else {
-            group.deleteEntry("htmlLoadExternalOverride");
-        }
-        if (mFolderDisplayFormatPreference == MessageViewer::Viewer::UseGlobalSetting) {
-            group.deleteEntry("displayFormatOverride");
-        } else {
-            group.writeEntry("displayFormatOverride", static_cast<int>(mFolderDisplayFormatPreference));
-        }
+    if (mCurrentFolderSettings) {
+        mCurrentFolderSettings->setFolderHtmlLoadExtPreference(mFolderHtmlLoadExtPreference);
+        mCurrentFolderSettings->setFormatMessage(mFolderDisplayFormatPreference);
+        mCurrentFolderSettings->writeConfig();
     }
 }
 
